# parallel-processing-teaching-toolkit

./: .gitignore  README.md  d  index.html  params.json
01-compiling/: README.md
01-compiling/01-plain-console/: README.md  run.sh
01-compiling/02-make/: Makefile  README.md  functions.c  functions.h  main.c  readme.txt  run.sh
01-compiling/03-qmake/: README.md  main.c  my-project.pro  run.sh
01-compiling/04-cmake/: README.md  main.c  run.sh
02-scripting/: README.md  run.sh
02-scripting/01-simple-script/: README.md  main.c  run.sh
02-scripting/02-iteration/: CMakeLists.txt  README.md  readme.txt  run.sh
02-scripting/03-screen/: CMakeLists.txt  README.md  counter  counter.c  run.sh
02-scripting/04-clock/: README.md  main.c
03-multi-core-processors/: README.md
03-multi-core-processors/01-openMP/: README.md
03-multi-core-processors/02-python-multiprocessing/: serial-example.py
03-openMP/: README.md
03-openMP/01-hello-openMP/: README.md  gcc-classic-compile.sh  main.c
03-openMP/04-for/: main.c
03-openMP/05-for-schedule/: CMakeLists.txt
03-openMP/06-sections/: README.md
03-openMP/07-sections-II/: main.c
04-GPU-accelerators/: Identifiers OpenCL vs CUDA.txt  README.md
04-GPU-accelerators/01-cuda/: README.md
04-GPU-accelerators/01-cuda/06-cuda-cmake-project/: CMakeLists.txt  README.md  run.sh
04-GPU-accelerators/02-openCL/: README.md
04-GPU-accelerators/02-openCL/02-vector_add/: CMakeLists.txt  README.md  kernel.cl  main.cpp
04-GPU-accelerators/02-openCL/10-c++11-integration/: CMakeLists.txt  README.md
04-GPU-accelerators/03-PyCUDA/: README.md  run.sh
04-GPU-accelerators/04-PyOpenCL/: README.md  hello-pyopencl.py  run.sh
04-openCL/: README.md
04-openCL/01-hello-openCL-plain/: README.md  main.cpp  run.sh
04-openCL/02-hello-openCL/: CMakeLists.txt
04-openCL/03-openCL-info/: CMakeLists.txt  main.cpp
05-clusters/: README.md
05-cuda/: README.md
06-mpi/: README.md
06-projects/: README.md
07-Spark/: README.md
07-python-multiprocessing/: README.md  multiprocessing-example.py  run.sh
(+256 files in other folders)
